# inspekcje

./: compose.yml  readme.md
.github/workflows/: release.yml
src/: CMakeLists.txt  backendclient.cpp  backendclient.h  dialogcompleteinspection.cpp  dialogcompleteinspection.h  dialogcompleteinspection.ui  dialogeditinspection.cpp  dialogeditinspection.h  dialogeditinspection.ui  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  dialogshowreport.cpp  dialogshowreport.h  dialogshowreport.ui  inspectionorderdialog.cpp  inspectionorderdialog.h  inspectionorderdialog.ui  inspectionrow.cpp  inspectionrow.h  inspectionrow.ui  inspectionrowforinspector.cpp  inspectionrowforinspector.h  inspectionrowforinspector.ui  inspectorwindow.cpp  inspectorwindow.h  inspectorwindow.ui  jwtmanager.cpp  jwtmanager.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  managerwindow.cpp  managerwindow.h  managerwindow.ui  monument.cpp  monument.h  res.qrc  selectuserdialog.cpp  (+2 more)
